Updates for email and other stuff
